fix off center nav menu

--- a/contact.css
+++ b/contact.css
@@ -106,7 +106,7 @@ hr.solid {
     margin: 0px 0;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 10px;
+    margin-bottom: 11px;
     opacity: 0.2;
 }
 
